ShakeCharity/ShakeSharityApp/force-app/main/default/objects/LH__Lookup_Helper_Filter_Group__c/fields/LH__Dupe_Test__c.field-meta.xml
<CustomField>
    <fullName>LH__Dupe_Test__c</fullName>
    <formula>&apos; &apos; + &apos;- test&apos;</formula>
    <label>Dupe Record Test</label>
    <type>Text</type>
</CustomField>