ShakeCharity/ShakeSharityApp/force-app/main/default/objects/LH__Lookup_Helper_Filter_Group__c/fields/LH__Test_Formula__c.field-meta.xml
<CustomField>
    <fullName>LH__Test_Formula__c</fullName>
    <formula>Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Test_Formula</label>
    <type>Text</type>
</CustomField>