ShakeCharity/ShakeSharityApp/force-app/main/default/objects/LH__Lookup_Helper_Filter_Group__c/fields/LH__Test_Lookup__c.field-meta.xml
<CustomField>
    <fullName>LH__Test_Lookup__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>This lookup field is used for testing purposes.</description>
    <label>Created By ID</label>
    <referenceTo>LH__Lookup_Helper_Filter__c</referenceTo>
    <relationshipLabel>Test Children</relationshipLabel>
    <relationshipName>TestRelationship</relationshipName>
    <type>Lookup</type>
</CustomField>