ShakeCharity/ShakeSharityApp/force-app/main/default/objects/LH__Lookup_Helper_Filter_Group__c/fields/LH__Test_Text_Field__c.field-meta.xml
<CustomField>
    <fullName>LH__Test_Text_Field__c</fullName>
    <label>Filter Logic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>